--- a/plugin/system_updater/update.html
+++ b/plugin/system_updater/update.html
@@ -8,7 +8,7 @@
 
   <div class="layoutbox">
 
-    <h2>HAIK アップデーター</h2>
+    <h2>システムアップデーター</h2>
 
     <div class="execute">
 
@@ -18,7 +18,7 @@
 
       <div class="description">
         <p>
-          HAIKを最新版へアップデートします。<br>
+          最新版にアップデートします。<br>
           「次へ」をクリックして最新版のバージョンを確認してください。
         </p>
       </div>
