--- a/skin/hokukenstyle/haik_bud/qblog_list_template.html
+++ b/skin/hokukenstyle/haik_bud/qblog_list_template.html
@@ -14,18 +14,18 @@
 ?>
 <div id="qblog_list" class="qblog-list qblog-list-<?php echo h($list_type)?>">
   <?php if (hv('blog_list_type', true) == 'grid' && $list_type != 'line') : ?>
-  <div class="row">
+  <div class="haik_bud_post_list">
   <?php foreach ($posts as $post):?>
-    <div class="col-sm-4">
-      <a class="thumbnail qblog-item" href="<?php echo h($post['url'])?>">
-        <div class="qblog_thumbnail_box" style="background-image: url(<?php echo h($post['image'])?>)">
-          <div class="qblog_date"><?php echo h($post['date'])?></div>
-        </div>
-        <div class="caption">
-  		<h3 class="qblog_title"><?php echo h($post['title'])?></h3>
-        </div>
-  	  </a>
-    </div>
+    <a class="post_link" href="<?php echo h($post['url'])?>">
+      <div class="post_item">
+          <div class="post_info">
+            <h3 class="post_title"><?php echo h($post['title'])?></h3>
+            <div class="post_category"><?php echo h($post['category'])?></div>
+            <div class="post_date"><?php echo h($post['date'])?></div>
+          </div>
+          <div class="post_thumbnail" style="background-image: url(<?php echo h($post['image'])?>);"></div>
+      </div>
+  	</a>
   <?php endforeach;?>
   </div>
 
@@ -35,12 +35,12 @@
   <?php foreach ($posts as $post):?>
     <li>
       <a href="<?php echo h($post['url'])?>">
+        <div class="qblog_date"><?php echo h($post['date'])?></div>
+        <h2 class="qblog_title no-toc"><?php echo h($post['title'])?></h2>
+        <p class="qblog_abstract"><?php echo h($post['abstract'])?></p>
         <div class="qblog_thumbnail_box" style="background-image: url(<?php echo h($post['image'])?>)">
-          <div class="qblog_date"><?php echo h($post['date'])?></div>
         </div>
       </a>
-      <h2 class="qblog_title no-toc"><a href="<?php echo h($post['url'])?>"><?php echo h($post['title'])?></a></h2>
-      <p class="qblog_abstract"><a href="<?php echo h($post['url'])?>"><?php echo h($post['abstract'])?></a></p>
     </li>
   <?php endforeach;?>
   </ul>
